<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_menu_principal"
            android:title="@string/menu_principal" />

        <item
            android:id="@+id/nav_cursos"
            android:icon="@drawable/ic_menu_cursos"
            android:title="@string/menu_cursos" />

        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/ic_menu_clientes"
            android:title="@string/menu_clientes" />

    </group>

    <item android:title="@string/entre_em_contato">
        <menu>
            <item
                android:id="@+id/nav_site"
                android:icon="@drawable/ic_menu_empresas"
                android:title="@string/menu_empresas" />

            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_menu_sobre"
                android:title="@string/menu_sobre" />


        </menu>
    </item>
</menu>