<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_principal">

    <fragment
        android:id="@+id/nav_principal"
        android:name="br.com.atmconsultoria.ui.principal.PrincipalFragment"
        android:label="@string/menu_principal"
        tools:layout="@layout/fragment_principal" />

    <fragment
        android:id="@+id/nav_clientes"
        android:name="br.com.atmconsultoria.ui.clientes.ClientesFragment"
        android:label="@string/menu_clientes"
        tools:layout="@layout/fragment_clientes" />

    <fragment
        android:id="@+id/nav_cursos"
            android:name="br.com.atmconsultoria.ui.cursos.CursosFragment"
        android:label="@string/menu_cursos"
        tools:layout="@layout/fragment_cursos" />

    <fragment
        android:id="@+id/nav_site"
            android:name="br.com.atmconsultoria.ui.site.EmpresasFragment"
        android:label="@string/menu_empresas"
        tools:layout="@layout/fragment_empresas" />

    <fragment
        android:id="@+id/nav_sobre"
        android:name="br.com.atmconsultoria.ui.sobre.SobreFragment"
        android:label="@string/menu_sobre"
        tools:layout="@layout/fragment_sobre" />


</navigation>